// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPageVoteThreshold /> should render proposal page vote threshold 1`] = `
<ProposalPagestyle__Card
  id="ProposalPageVoteThreshold"
>
  <ProposalPageVoteThreshold__ProposalPageVoteThresholdContainer>
    <h4>
      proposal.vote.threshold.title
    </h4>
    <p>
      <Tooltip
        backgroundColor="black"
        borderRadius="4px"
        label={
          <React.Fragment>
            <Text
              fontFamily="OpenSans"
              fontSize={1}
              lineHeight="sm"
              textAlign="center"
            >
              numeric-votes-count
            </Text>
          </React.Fragment>
        }
        zIndex={10}
      >
        <div
          className="vote-counter"
        >
          <ProposalPagestyle__CategoryCircledIcon
            paddingLeft={6}
            paddingTop={4}
            size={24}
          >
            <Icon
              color="#6c757d"
              name="like"
              size={14}
            />
          </ProposalPagestyle__CategoryCircledIcon>
          <Box
            ml="3"
          >
            proposal.vote.count
          </Box>
        </div>
      </Tooltip>
      <div
        className="vote-counter"
      >
        <ProposalPagestyle__CategoryCircledIcon
          paddingLeft={5}
          paddingTop={5}
          size={24}
        >
          <Icon
            color="#6c757d"
            name="trophy"
            size={14}
          />
        </ProposalPagestyle__CategoryCircledIcon>
        <Box
          ml="3"
        >
          count-points
        </Box>
      </div>
    </p>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="success"
      isChild={false}
      label="30%"
      max={100}
      min={0}
      now={30}
      srOnly={false}
      striped={false}
    />
    <div>
      proposal.vote.threshold.progress
    </div>
  </ProposalPageVoteThreshold__ProposalPageVoteThresholdContainer>
</ProposalPagestyle__Card>
`;

exports[`<ProposalPageVoteThreshold /> should render proposal page vote threshold reached 1`] = `
<ProposalPagestyle__Card
  id="ProposalPageVoteThreshold"
>
  <ProposalPageVoteThreshold__ProposalPageVoteThresholdContainer>
    <h4>
      proposal.vote.threshold.reached
    </h4>
    <p>
      <Tooltip
        backgroundColor="black"
        borderRadius="4px"
        label={
          <React.Fragment>
            <Text
              fontFamily="OpenSans"
              fontSize={1}
              lineHeight="sm"
              textAlign="center"
            >
              numeric-votes-count
            </Text>
          </React.Fragment>
        }
        zIndex={10}
      >
        <div
          className="vote-counter"
        >
          <ProposalPagestyle__CategoryCircledIcon
            paddingLeft={6}
            paddingTop={4}
            size={24}
          >
            <Icon
              color="#6c757d"
              name="like"
              size={14}
            />
          </ProposalPagestyle__CategoryCircledIcon>
          <Box
            ml="3"
          >
            proposal.vote.count
          </Box>
        </div>
      </Tooltip>
    </p>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="success"
      isChild={false}
      label="150%"
      max={150}
      min={0}
      now={150}
      srOnly={false}
      striped={false}
    />
    <div>
      proposal.vote.threshold.progress_reached
    </div>
  </ProposalPageVoteThreshold__ProposalPageVoteThresholdContainer>
</ProposalPagestyle__Card>
`;
